--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c1b216857e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Has to be named later</title>
+    <title>Personal Message</title>
 </head>
 <body>
     <header id="main-header">
