--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header id="main-header">
         <div class="container">
-            <h1><i class="fa-solid fa-face-grin-beam-sweat"></i> Hey Karishma!!</h1>
-            <h3>I know this sound cringe but here we go..</h3>
+            <h1> Hey Stranger!!</h1>
+            <h3><i class="fas fa-user"></i>User</h3>
         </div>
     </header>
     <section id="timeline">
@@ -19,53 +19,53 @@
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i> Ram Ram ji</h3>
-                    <p>ab maine socha development ki practice kr rha hu to lge hath iske through hi baat kr lu kqoki abhi vo festivals ka time chl rha hai na to mera bhi time ni match ho rha ....or tumhe bhi kaam honge hi ghr pe ofcourse...Swipe up <i class="fas fa-arrow-up"></i></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam commodi modi tempore, nihil ducimus ullam ab temporibus, illo, voluptas provident optio eligendi! Explicabo perspiciatis vero molestiae nostrum ipsum, excepturi, officiis accusamus eligendi quibusdam fugit hic beatae? Aliquid ullam quaerat repudiandae placeat ab illum molestiae reiciendis, cum impedit est tempora autem.</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <p>or merko tha ki kab exams khtm ho or mai free mind se btaau araam se ...or jaisa ki maine pehle bhi kahaa tha.. i dont mind yrr agr tumhe time kam milta hai to ...or rhi baat vo iskcon jaane waali ...hn baat to vhi thi na ye to thoda card bharne ke liye bakwaas kr rha hu beech beech me 😂......Swipe up <i class="fas fa-arrow-up"></i>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo dolor perspiciatis in odit odio nostrum illum, cupiditate eos atque incidunt maiores, aspernatur tempora reprehenderit eligendi amet cumque! Nostrum animi error accusamus debitis quis corporis tenetur harum. Et distinctio at perspiciatis minus animi soluta itaque tempora quas, laboriosam consectetur repellendus accusantium.
                     </p>
                 </div>
             </li>
             <li>
                 <div>
-                    <p>to vo jaise hi ye festivals niklte hai jab tum bhi free hoge or mai bhi 15th ke baad to fir ek din nikaal ke chlte hai na tumne bhi nhi dekha tha as you said or issi bhaane mai bhi dekh lunga ...baaki rhi baat nikla kaise hai mai tum jiske sath bhi jaate ho tumhaare friend circle me baat kr lunga na aryan se bolkr vo bol dega ki han college gye hai.. Swipe up <i class="fas fa-arrow-up"></i></p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit repudiandae laboriosam, ullam ex iusto repellat aliquam quod eum nihil eligendi! Consequatur, nobis dolorem? Architecto eius tenetur unde ipsam blanditiis! Provident inventore et voluptas hic recusandae autem dolorum minus incidunt veritatis error, ducimus quidem. Voluptates nihil, sint suscipit aliquid obcaecati rem.</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <p>hn mtlb aise nhi ki sbko btaane ki bol rha hu bss vo humaare beech rhega na ..kisi or ko btaana hi kqo...baaki vo tum college ka bol dena itna complicated bhi nhi hai ek din se kya hota hai ab to exams bhi abhi gye hai to kuch din honge free ...baaki agr isse htke bhi koi problem hai to uska bhi solution nikaal lenge itna time nhi lgna vaise bhi...or aisi koi dikkt ni hai mai nsp tak aa hi jaaunga araam last time ki trha  ..Swipe up <i class="fas fa-arrow-up"></i> </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ipsam fuga iure nam officiis vitae atque laborum nostrum aliquid animi quam cumque asperiores praesentium totam deserunt et incidunt explicabo mollitia qui corrupti quis, quo ut, aut pariatur. Cumque, doloremque nostrum ut iste modi libero corporis temporibus laboriosam, numquam, dignissimos repellat?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <p>pr ye sb to tb ki baat hai jab chlna hai or vo to tumhaare upr hai kab chlna hai..tum itna bhi overthink mtt kro hn ptaa hai ab soch rhe hoge ki overthinking to mai krta hu pr dekho productivity nikaal rhaa hu overthinking se bhi as i previously said thoda ye card bhi to bhrna hai taaki vo js se vo animation work kre ..Swipe up <i class="fas fa-arrow-up"></i></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni minus sequi, deserunt iste quae iusto dignissimos numquam, repellat voluptatibus impedit illum laborum iure ipsa soluta modi minima reiciendis aliquam. Deserunt aspernatur tempora, quis similique quod ipsum unde dolore et eligendi eius natus quibusdam! Blanditiis, quaerat cupiditate! Animi quo aperiam qui.</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <p>And itna mtt socho ab maine bhi bhut sochke hi bola hai ab tum ye btaao jaana konsi date ko hai...hn hn ptaa hai thoda ek dum se aise ajeeb sa lg rha hoga mai khud nervous hojaata hu but dekhi jaaegi ab bss tum apni taraf se jldi date clear krdo baaki kuch problem hogi nhi vaise hogi to dekh lenge ..or aise pehle kabhi akele nikle bhi nhi to smjh skta hu kya pta uss vjha se thoda lg rha ho tumhe ..Swipe up <i class="fas fa-arrow-up"></i></p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias, suscipit! Natus aut perferendis blanditiis perspiciatis id maxime nemo eum fugiat soluta! Quo quae nulla illo numquam tempora aspernatur animi ullam consequuntur obcaecati sunt earum aut nihil ea laboriosam laborum, doloribus maxime sint, impedit voluptas. Accusantium incidunt impedit obcaecati? Odio, dignissimos.</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <p>baaki han vaise vo last time jab hi tha aisa to jab vo pacific gye the subhash nagar jab aryan or kirti chle gye the to vaise hi casual si date rkh lete hai na 👀 ....ab faaltu ka overthink mtt krna merse bhi aise baat hoti nhi jo bhi hai ek baar milke thode gappe maar lenge ab ptaa nhi kyaa kyaa likh diya maine bss likh diya jo bhi hai pdh lena araam se time nikaal ke ..Swipe up <i class="fas fa-arrow-up"></i></p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque rerum reprehenderit voluptas deserunt libero! Labore, tenetur repudiandae aspernatur architecto asperiores qui nulla velit aliquid quibusdam. Id recusandae assumenda fuga exercitationem? Soluta repellendus hic ab expedita, temporibus voluptas commodi culpa facilis, voluptate quibusdam officiis, inventore eveniet enim maxime quos sequi vitae.</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <p>baaki tumhe jaisa thik lge araam se jab milke btaaa dena or hn jyaada mtt sochne lgna ab kqoki ye iska link behjke tumhaare message ka hi wait kr rha hounga smjho to vaise to tum chaaho to araam se iska reply 15th - 16th tak kr lena jab tak araam se enjoy kro jab time mile araam se sochke btaa dena kab chlna hai 👀 ..Swipe up <i class="fas fa-arrow-up"></i></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore illo dignissimos distinctio officia mollitia veniam enim eius est quod. Doloribus libero atque voluptatibus unde illo? Ducimus laborum voluptas assumenda iste. Sit, voluptas esse itaque non ipsam officiis dignissimos rem. Sint laudantium debitis odio alias repellendus pariatur placeat, impedit sed architecto?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <p>or mai shi btaau to jo mere dimaag me aa rha hai vo mai likhe jaa rha hu to baat thodi ghumi ghumi si lge to thoda adjust kr lena 😅 chlo ab sota hu ab ...or kisi ko mtt send krna ye 💀 bsss time paas me yhaa likh diya kqoki itni bdi baat chat me krna thoda mushkil hota vhaa time lg jaata or mai fir aise ek dum se blank hojaata hu to fir btaa nhi paata to isliye abhi baithke araam se likh rha hu..Swipe up <i class="fas fa-arrow-up"></i></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, quisquam praesentium dolor ipsa illum, est corrupti architecto magni aperiam accusamus placeat libero minus nesciunt tempore ducimus repellendus neque dolore labore? Error, nesciunt quae, omnis non consequatur ullam ad quod est quia eos nihil accusantium! Laboriosam dolore dignissimos facilis optio ipsam!</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <p>thats it jo bhi tha bolna to or bhi tha bhut pr yaad nhi aa rha mai aise itna baaki ka faltu ka likh ke time waste ni krna chaahta tumharaa to jo cheej important thi beech me uspe focus krna ye to aise hi likh diya ...ab nhi likha rha aise to likhta hi reh jaaunga 😂 bye byee</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam quibusdam, impedit beatae debitis excepturi enim vero quae nulla eaque magnam aspernatur suscipit earum aliquam? Voluptatibus, nihil. Magnam ipsam quo minima ullam vel dolore officiis accusantium aliquid distinctio ipsum laborum at quas ut tempore est, nihil neque facilis omnis. Odit, iure?</p>
                 </div>
             </li>
         </ul>
